syntax = "proto3";

package xatu.noderecord;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/noderecord";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message Consensus {
  google.protobuf.StringValue enr = 1;
  google.protobuf.StringValue node_id = 2 [json_name = "node_id"];
  google.protobuf.StringValue peer_id = 3 [json_name = "peer_id"];
  google.protobuf.Int64Value timestamp = 4;
  google.protobuf.StringValue name = 5;
  google.protobuf.StringValue fork_digest = 6 [json_name = "fork_digest"];
  google.protobuf.StringValue next_fork_digest = 7 [json_name = "next_fork_digest"];
  google.protobuf.StringValue finalized_root = 8 [json_name = "finalized_root"];
  google.protobuf.UInt64Value finalized_epoch = 9 [json_name = "finalized_epoch"];
  google.protobuf.Timestamp finalized_epoch_start_date_time = 10 [ json_name = "finalized_epoch_start_date_time" ];
  google.protobuf.StringValue head_root = 11 [json_name = "head_root"];
  google.protobuf.UInt64Value head_slot = 12 [json_name = "head_slot"];
  google.protobuf.Timestamp head_slot_start_date_time = 13 [ json_name = "head_slot_start_date_time" ];
  google.protobuf.StringValue cgc = 14;
  google.protobuf.StringValue ip = 15;
  google.protobuf.UInt32Value tcp = 16;
  google.protobuf.UInt32Value udp = 17;
  google.protobuf.UInt32Value quic = 18;
}
